Fix plugin build for use with 4.0 and 4.1 (#4883)